@@ -1,3 +1,14 @@
+2007-06-30  Pedro Alves  <pedro_alves@portugalmail.pt>
+
+	* Makefile (download): Depend on all instead of only on
+	PipeDev.dll.
+	* PipeLib.h (PIPELIB_API): New define.
+	(CreatePipe, GetPipeName, SetPipeTag): Use PIPELIB_API.
+	* PipeLib.cpp: Include windows.h earlier.
+	(GetPipeName, SetPipeTag, PeekNamedPipe): Use
+	PIPELIB_API.
+	(CreatePipe): Use PIPELIB_API.  Comment unused parameter names.
+
 2007-06-29  Pedro Alves  <pedro_alves@portugalmail.pt>
 
 	* PipeLib: Delete.
